Version 0.3.5 (2019-03-)
- Added `ALLOWED_DOMAINS` option (Issue #143)
- Refactor for Pypi packaging (Issue #147)
- Include argparse for commandline parameters
- Update dependencies
- Code cleanup, lint (Issue #50)

Version 0.3.4 (2019-01-27)
- Spelling fix @nelsonblaha
- Added env_var tag exception (Issue #138)
- Event observer: support access tokens and disconnect on modal close (Issue #136)
- Added editor option to hide file / directory stats (Issue #130)
- Added HASS_WS_API option to correctly prefill the websocket URL
- Open common image formats in new tab (Issue #133)
- Update dependencies

Version 0.3.3 (2018-11-06)
- Display covered last item in file browser (Issue #120)
- Proper displaying of file browser (Issue #121)
- Added support for long-lived JWT access tokens (Issue #118)

Version 0.3.2 (2018-08-09)
- Allow `PASSWORD` to be numeric (Issue #108) @danielperna84
- Sanity check for `ALLOWED_NETWORKS`, `BANNED_IPS` and `IGNORE_PATTERN` (Issue #109) @danielperna84
- Reading files as UTF-8 (Issue #80) @danielperna84

Version 0.3.1 (2018-07-15)
- Fix SESAME / SESAME_TOTP_SECRET bug (Issue #103) @danielperna84
- Added client IP to network status modal @danielperna84
- Allow setting logging level with environment variable HC_LOGLEVEL @danielperna84

Version 0.3.0 (2018-07-13)
- Allow passing settings via environment variables (Issue #100) @danielperna84
- Added basic git stash functionality (Issue #16) @danielperna84
- Added NOTIFY_SERVICE option @danielperna84
- Notifying if used passwords are insecure (Issue #100) and if SESAME has been used @danielperna84
- CREDENTIALS setting replaced by USERNAME and PASSWORD @danielperna84
- PASSWORD can optionally be provided as SHA256 hash (Issue #100) @danielperna84
- Added SESAME_TOTP_SECRET for TOTP based IP whitelisting (Issue #100) @danielperna84
- Added git diff functionality (Issue #16) @danielperna84
- Red colored menu button as indicator for outdated version @danielperna84