@@ -1576,7 +1576,7 @@
     </div>
     <!-- Main Editor Area -->
     <div class="row">
-        <div class="col m4 l3 hide-on-small-only">
+        <div id="hass_menu_l" class="col m4 l3 hide-on-small-only">
             <br>
             <div class="input-field col s12">
                 <select onchange="insert(this.value)">
@@ -1682,7 +1682,7 @@
             <ul id="fbelements"></ul>
           </li>
           <div class="row col s12 shadow"></div>
-          <div class="z-depth-3 hide-on-med-and-up">
+          <div id="hass_menu_s" class="z-depth-3 hide-on-med-and-up">
             <div class="input-field col s12" style="margin-top: 30px;">
               <select onchange="insert(this.value)">
                 <option value="" disabled selected>Select trigger platform</option>
@@ -2113,6 +2113,29 @@
     var global_current_filepath = null;
     var global_current_filename = null;
 
+    function toggle_hass_panels() {
+        if (document.getElementById("hass_menu_l").style.display == "none") {
+            document.getElementById("hass_menu_l").style.display = "";
+            document.getElementById("editor").classList.remove("l12");
+            document.getElementById("editor").classList.add("l9");
+        }
+        else {
+            document.getElementById("hass_menu_l").style.display = "none";
+            document.getElementById("editor").classList.remove("l9");
+            document.getElementById("editor").classList.add("l12");
+        }
+        if (document.getElementById("hass_menu_s").style.display == "none") {
+            document.getElementById("hass_menu_s").style.display = "";
+            document.getElementById("editor").classList.remove("l12");
+            document.getElementById("editor").classList.add("l9");
+        }
+        else {
+            document.getElementById("hass_menu_s").style.display = "none";
+            document.getElementById("editor").classList.remove("l9");
+            document.getElementById("editor").classList.add("l12");
+        }
+    }
+
     function got_focus_or_visibility() {
         if (global_current_filename && global_current_filepath) {
             // The globals are set, set the localStorage to those values
@@ -2234,6 +2257,7 @@
             },
             minLength: 1,
         });
+        $standalone
     });
 </script>
 <script type="text/javascript">
